[package]
name = "actix-auth-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5"
actix-session = "0.4"
actix-redis = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
env_logger = "0.8"
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
